--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -1,10 +1,5 @@
 
-.content {
-    grid-area: c;
-    background-color: #0c7eea;
-}
-
-.content img {
+ .profile img {
     height: 300px;
     width: 80%;
 }
