--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -9,6 +9,10 @@
 .dialog {
     padding-bottom: 10px;
 }
+.dialog a{
+    text-decoration: none;
+    color: black;
+}
 .dialogs .active{
     color: red;
 
