--- a/src/components/Profile/My Posts/Post/Post.module.css
+++ b/src/components/Profile/My Posts/Post/Post.module.css
@@ -1,10 +1,16 @@
 
 
 .item {
+    display: grid;
+    grid-template-columns: 120px auto;
     color:white;
+    align-items: center;
 }
 .item img {
     width: 50px;
     height: 50px;
     border-radius: 50%;
+}
+.likes{
+    padding-bottom: 10px;
 }
