--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,8 @@
 }
 .app-wrapper-content {
     grid-area: c;
-    background-color: #0c7eea;
+    background: rgb(58,123,180);
+    background: linear-gradient(144deg, rgba(58,123,180,0.6599690880989181) 0%, rgba(62,154,49,0.6290571870170015) 88%, rgba(252,171,69,0.6306027820710973) 100%);
+    border-radius: 10px;
 }
 
