--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -1,7 +1,9 @@
 
  .profile img {
     height: 300px;
-    width: 80%;
+    width: 100%;
+     border-top-left-radius: 10px;
+     border-top-right-radius: 10px;
 }
 .ava{
     padding: 10px;
