--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -1,12 +1,19 @@
+.infoContainer{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 
+}
  .profile img {
     height: 300px;
     width: 100%;
      border-top-left-radius: 10px;
      border-top-right-radius: 10px;
 }
-.ava{
-    padding: 10px;
+.avatar img{
+    width:200px;
+    height: 200px;
+    border-radius: 50%;
 }
 .text_title{
     font-weight: bold;
@@ -16,3 +23,46 @@
     padding-left: 10px;
 
 }
+ .editableAvatarWrapper {
+     position: relative;
+ }
+ .changePhoto{
+     position: absolute;
+     left: 170px;
+     bottom: 30px;
+     width: 30px;
+     height: 30px;
+ }
+ .changePhoto_input {
+     display: none;
+     visibility: hidden;
+ }
+ .changePhoto_label {
+     display: block;
+     width: 100%;
+     height: 100%;
+     padding: 3px;
+     border-radius: 15px;
+     background-color: rgba(0, 0, 0, 0.5);
+     transition: all 0.2s;
+     cursor: pointer;
+
+ }
+ .changePhoto_icon {
+     width: 100%;
+
+ }
+ .changePhoto_label:hover {
+     transform: scale(1.5);
+ }
+ .mainInfoContainer{
+     display: flex;
+     flex-direction: column;
+
+ }
+ .status, .lookingJob{
+     font-size: 16px;
+     color: #4c4c50;
+     font-style: italic;
+     margin-bottom: 5px;
+ }
