--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -1,18 +1,24 @@
+.wrapperContainer{
+    width: 600px;
+}
 .infoContainer{
     display: flex;
     justify-content: space-between;
     align-items: center;
-
+background-color: aliceblue;
+    border-radius: 10px;
+    padding: 10px;
+    margin-top: 15px;
 }
  .profile img {
-    height: 300px;
+    height: 200px;
     width: 100%;
      border-top-left-radius: 10px;
      border-top-right-radius: 10px;
 }
 .avatar img{
-    width:200px;
-    height: 200px;
+    width:150px;
+    height: 150px;
     border-radius: 50%;
 }
 .text_title{
@@ -28,7 +34,7 @@
  }
  .changePhoto{
      position: absolute;
-     left: 170px;
+     left: 130px;
      bottom: 30px;
      width: 30px;
      height: 30px;
