--- a/src/components/Users/User.module.css
+++ b/src/components/Users/User.module.css
@@ -26,5 +26,6 @@ display: flex;
 }
 .followBtn{
 display: flex;
-    align-items: center;
+    flex-direction: column;
+    justify-content: center;
 }
